Daluxolo Mbatha storing big data/daluxolo-mbatha-VPC.yml
---
AWSTemplateFormatVersion: "2010-09-09"
Description: VPC configuration for the EDSA Storing Big Data 
Parameters:
  EnvironmentName:
    Description: Enter a string that will be prefixed onto each resource created in the template
    Type: String
    Default: DE-Extract
  VpcCIDR:
    Description: The IPv4 address space, given in CIDR notation, for the VPC hosting the scenario challenge
    Type: String
    Default: 192.168.0.0/16
  DataCenterPublicSubnetCIDR:
    Description: The IPv4 address space, given in CIDR notation, for the publicly accessible portion of the VPC.
    Type: String
    Default: 192.168.10.0/24
Resources:
  VPC:
    Description: An AWS virtual private cloud
    Type: AWS::EC2::VPC
    Properties: 
     CidrBlock: !Ref VpcCIDR
     EnableDnsHostnames: true
     EnableDnsSupport: true
     Tags: 
       - Key: Name
         Value: !Ref EnvironmentName
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Ref EnvironmentName  
  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: VPC
      InternetGatewayId:
        Ref: InternetGateway 
  DataCenterPublicSubnet:
    Type: AWS::EC2::Subnet
    Properties: 
      CidrBlock: !Ref DataCenterPublicSubnetCIDR
      VpcId: !Ref VPC
      Tags: 
        - Key: Name
          Value: DE-Extract Data Center Subnet
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties: 
      VpcId: !Ref VPC
      Tags: 
        - Key: Name
          Value: DE-Extract Public Route
  DefaultPublicRoute:
    Type: AWS::EC2::Route
    Properties: 
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
      RouteTableId: !Ref PublicRouteTable
  DataCenterPublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref DataCenterPublicSubnet
  WindowsInstanceSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: This group permits RDP access to an instance deployed within the public subnet of the VPC
      GroupName: DE-Extract-WindowsInstanceSG
      VpcId: !Ref VPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 3389
        ToPort: 3389
        CidrIp: 0.0.0.0/0
      Tags: 
        - Key: Name
          Value: DE-Extract-WindowsInstanceSG 
  FileServerSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: This security group is responsible for permitting ssh access to the data center-s file server from an internal source within the VPC
      GroupName: DE-Extract-FileServerSG
      VpcId:
        Ref: VPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: 192.168.10.0/24
      Tags: 
        - Key: Name
          Value: DE-Extract-FileServerSG
  FileGatewaySG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: This security group controls the access to the file gateway instance
      GroupName: DE-Extract-FileGatewaySG
      VpcId:
        Ref: VPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 1
        ToPort: 65534
        CidrIp: 192.168.0.0/16
      Tags: 
        - Key: Name
          Value: DE-Extract-FileGatewaySG
